[package]
name = "gpt_image_2_dev"
version = "0.1.0"
edition = "2024"
description = "Minimal Rust package for GPT Image 2 Dev site metadata and docs.rs indexing."
license = "MIT"
homepage = "https://www.gpt-image-2.dev/"
documentation = "https://docs.rs/gpt_image_2_dev"
repository = "https://github.com/aitools12/gpt-image-2-dev"
readme = "README.md"
keywords = ["gpt-image-2", "image", "ai", "editor"]
categories = ["multimedia"]

[dependencies]

[package.metadata.docs.rs]
all-features = true
